# libadbpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
lib/: CMakeLists.txt
lib/include/adb/: connection.h  protocol.h  transport.h
lib/include/adb/protocol/: constants.h  protocol.h  serialization.h  util.h
lib/src/: connection.cpp  protocol.cpp
lib/src/adb/protocol/: serialization.cpp  util.cpp
